Aesthetics: Fixed wrapping of long text links on /dataset/read

--- a/ckanext/dgu/theme/public/css/dgu.css
+++ b/ckanext/dgu/theme/public/css/dgu.css
@@ -800,6 +800,11 @@ td.dataset-label {
   margin-top: 1px;
   margin-right: 0px;
 }
+.one-line-link {
+  display: block;
+  word-wrap: break-word;
+  white-space: normal !important;
+}
 
 /* Resources */
 .quick-info {
